Dosage 1.9 (released xx.xx.xxxx)

Features:
- comics: Added AmazingSuperPowers strip.
- comics: Added PandyLand strip.

Fixes:
- scripts: Ensure the generated comic names do not exceed 100 characters so they do
  not cause problems with path length restrictions.


Dosage 1.8 (released 20.12.2012)

Changes:
- comics: Add compatibility to requests module >= 1.0.
- comics: Updated the comic list with the generator scripts.


Dosage 1.7 (released 18.12.2012)

Features:
- cmdline: Added proper return codes for error conditions.
- comics: Added more robust regular expressions for HTML tags.
  They match case insensitive and ignore whitespaces now.
- comics: Use the python-requests module for HTTP requests.
- comics: Respect the robots.txt of downloaded HTML pages

Changes:
- installation: Added support for dynamic configuration values.
- installation: Require and use Python 2.7
- comics: Removed the twisted and zope dependencies by adding
  an internal plugin search mechanism.
- comics: Replace the disable mechanism with an adult option.
- comcis: Add scripts to automate comic listings for Creators, Universal,
  KeenSpot, GoComics and DrunkDuck.
- testing: Refactored the test comic routine into fully automatic and
  complete tests cases for every comic.
- cmdline: Improved terminal feature detection.

Fixes:
- comics: Fix all comics!
- comics: Don't add empty URLs to the list of found URLs.


Dosage v.1.6.0:
    * The "Not Dead Yet" release.
    * Added / Fixed / etc. comics:
        - Too many to list, really.
    * New dependencies:
        - Twisted
        - zope.interface (not zope)
    * Revamped plugin system, the first step on the road to Twisted.

Dosage v.1.5.8:
    * Added comics:
        - BonoboConspiracy
        - ChasingTheSunset
        - Comedity
        - GoneWithTheBlastwave
        - KeenSpot/* -- a *LOT* of KeenSpot submodules
        - NichtLustig
        - OtenbaFiles
        - Wulffmorgenthaler
        - Y
    * Fixed comics: